<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Scrobble Droid</string>
<string name="configuration_title"><b>Scrobble Droid</b> Settings</string>
<string name="enable">Start automatically in the background and enable scrobbling</string>
<string name="immediate">Scrobble each track immediately after playing (uses more battery power)</string>
<string name="user_settings">Last.fm Account</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="save_settings">Apply/save settings</string>
<string name="reset_settings">Reset to saved settings</string>
<string name="sign_up">Sign up for an account</string>
<string name="view_user_page">View your user page</string>
<string name="status">Status</string>
<string name="tracks_ready">0#No tracks are waiting to be scrobbled.| 1#There is one track waiting to be scrobbled.| 1&lt;There are {0} tracks waiting to be scrobbled.</string>
<string name="scrobble_immediate">Scrobbling starts automatically when a track finishes.</string>
<string name="scrobble_when_minutes">1#one minute| 1&lt;{0} minutes</string>
<string name="scrobble_when_tracks">1#is a track| 1&lt;are {0} tracks</string>
<string name="scrobble_when">Scrobbling will start automatically about {0} after music stops playing, or when there {1} waiting (whichever happens first).</string>
<string name="scrobble_now">Start scrobbling now</string>
<string name="scrobbling_in_progress">Scrobbling is in progress...</string>
<string name="scrobbling_ok">The last scrobble was successful.</string>
<string name="scrobbling_banned">This version of this application is no longer allowed to scrobble. Please try upgrading to a newer version if one is available.</string>
<string name="update_link">Check for new version</string>
<string name="scrobbling_badauth">Scrobbling failed because the username or password is incorrect. Please check them.</string>
<string name="scrobbling_badtime">Scrobbling failed because the time or the timezone on this device appears to be incorrect. Please check them.</string>
<string name="scrobbling_failed_net">Scrobbling failed because of a network error.</string>
<string name="scrobbling_failed_other">Scrobbling failed for an unknown reason.</string>
</resources>
